--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li>
                 <a href="curriculos/jorge.html">Prof. Jorge</a>
+                <a href="curriculos/rafael.html">Rafael</a>
             </li>
         </ul>
     </div>
